manifests/prometheus/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    name: prometheus
spec:
  ingressClassName: "nginx"
  rules:
  - host: prometheus-hml.jetsales.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus
            port: 
              number: 9090
